# freebsd-ports

Mk/Uses/: cabal.mk
converters/hs-aeson-pretty/: Makefile  distinfo
devel/hs-ShellCheck/: Makefile  distinfo
devel/hs-alex/: Makefile  distinfo
devel/hs-bytestring-nums/: Makefile  distinfo
devel/hs-c2hs/: Makefile  distinfo
devel/hs-cabal-install/: Makefile
devel/hs-cpphs/: Makefile  distinfo
devel/hs-darcs/: Makefile  distinfo
devel/hs-darcs/files/: patch-Setup.hs
devel/hs-ghc-events/: Makefile  distinfo
devel/hs-git-annex/: Makefile  distinfo
devel/hs-git-annex/files/: pre-makesum-patch-git-annex.cabal
devel/hs-haddock/: Makefile  distinfo
devel/hs-happy/: Makefile  distinfo
devel/hs-hasktags/: Makefile  distinfo
devel/hs-hlint/: Makefile  distinfo
devel/hs-hoogle/: Makefile  distinfo
devel/hs-hspec-discover/: Makefile  distinfo
devel/hs-mueval/: Makefile  distinfo
devel/hs-shake/: Makefile  distinfo
devel/hs-threadscope/: Makefile  distinfo
devel/stack/: Makefile  distinfo
games/hs-scroll/: Makefile  distinfo
lang/ghc/: Makefile  bsd.cabal.mk  bsd.hackage.mk  bsd.new-cabal.mk  cabal.config  distinfo
lang/ghc/files/: patch-aclocal.m4  patch-ghc.mk
lang/ghc/files844/: patch-ghc.mk
lang/hs-brainfuck/: Makefile  distinfo
lang/hs-unlambda/: Makefile
math/hs-Agda/: Makefile
print/hs-hscolour/: Makefile  distinfo
textproc/cgrep/: Makefile  bsd.new-cabal.mk  distinfo
textproc/cgrep/files/: patch-cabal-doctest-1.0.6_cabal-doctest.cabal  patch-exceptions-0.10.0_exceptions.cabal  patch-primitive-0.6.4.0_primitive.cabal  patch-split-0.2.3.3_split.cabal  patch-stringsearch-0.3.6.6_stringsearch.cabal  patch-unliftio-core-0.1.2.0_unliftio-core.cabal  patch-utf8-string-1.0.1.1_utf8-string.cabal
textproc/hs-lhs2tex/: Makefile  distinfo
textproc/hs-pandoc/: Makefile  distinfo
textproc/hs-pandoc-citeproc/: Makefile  distinfo
textproc/hs-yaml/: Makefile  distinfo
www/hs-DAV/: Makefile  distinfo
www/hs-hjsmin/: Makefile  distinfo
www/hs-http2/: Makefile
www/hs-wai-app-static/: Makefile  distinfo
www/hs-warp/: Makefile
www/hs-yesod-bin/: Makefile  distinfo
x11/hs-xmobar/: Makefile  distinfo  pkg-plist
