--- git-annex.cabal.orig	2019-01-09 07:32:12 UTC
+++ git-annex.cabal
@@ -509,7 +509,6 @@ Executable git-annex
           if (! os(solaris) && ! os(gnu) && ! os(linux))
             CPP-Options: -DWITH_KQUEUE
             C-Sources: Utility/libkqueue.c
-            Includes: Utility/libkqueue.h
             Other-Modules: Utility.DirWatcher.Kqueue
 
   if flag(Dbus)
