--- exceptions-0.10.0/exceptions.cabal.orig	2018-03-11 14:52:28 UTC
+++ exceptions-0.10.0/exceptions.cabal
@@ -1,6 +1,7 @@
 name:          exceptions
 category:      Control, Exceptions, Monad
 version:       0.10.0
+x-revision: 2
 cabal-version: >= 1.8
 license:       BSD3
 license-file:  LICENSE
@@ -35,7 +36,7 @@ library
   build-depends:
     base                       >= 4.3      && < 5,
     stm                        >= 2.2      && < 3,
-    template-haskell           >= 2.2      && < 2.14,
+    template-haskell           >= 2.2      && < 2.15,
     transformers               >= 0.2      && < 0.6,
     transformers-compat        >= 0.3      && < 0.7,
     mtl                        >= 2.0      && < 2.3
@@ -66,4 +67,4 @@ test-suite exceptions-tests
     test-framework             >= 0.8      && < 0.9,
     test-framework-hunit       >= 0.3      && < 0.4,
     test-framework-quickcheck2 >= 0.3      && < 0.4,
-    QuickCheck                 >= 2.5      && < 2.12
+    QuickCheck                 >= 2.5      && < 2.13
