--- primitive-0.6.4.0/primitive.cabal.orig	2018-05-30 18:38:36 UTC
+++ primitive-0.6.4.0/primitive.cabal
@@ -1,5 +1,6 @@
 Name:           primitive
 Version:        0.6.4.0
+x-revision: 1
 License:        BSD3
 License-File:   LICENSE
 
@@ -53,7 +54,7 @@ Library
         Data.Primitive.Internal.Compat
         Data.Primitive.Internal.Operations
 
-  Build-Depends: base >= 4.5 && < 4.12
+  Build-Depends: base >= 4.5 && < 4.13
                , ghc-prim >= 0.2 && < 0.6
                , transformers >= 0.2 && < 0.6
 
