--- split-0.2.3.3/split.cabal.orig	2018-01-24 03:00:12 UTC
+++ split-0.2.3.3/split.cabal
@@ -1,5 +1,6 @@
 Name:                split
 Version:             0.2.3.3
+x-revision: 1
 Stability:           stable
 
 Description:         A collection of various methods for splitting
@@ -51,7 +52,7 @@ Source-repository head
 
 Library
   ghc-options:       -Wall
-  build-depends:     base <4.12
+  build-depends:     base <4.13
   exposed-modules:   Data.List.Split, Data.List.Split.Internals
   default-language:  Haskell2010
   Hs-source-dirs:    src
