--- stringsearch-0.3.6.6/stringsearch.cabal.orig	2015-03-28 23:03:58 UTC
+++ stringsearch-0.3.6.6/stringsearch.cabal
@@ -8,6 +8,7 @@ Name:                stringsearch
 -- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
 -- standards guiding when and how versions should be incremented.
 Version:             0.3.6.6
+x-revision: 1
 
 Homepage:            https://bitbucket.org/dafis/stringsearch
 Bug-reports:         https://bitbucket.org/dafis/stringsearch/issues
@@ -83,7 +84,7 @@ Library
   -- Packages needed in order to build this package.
   if flag(base4)
     Build-depends:   base >= 4 && < 5, array >= 0.3 && < 0.6,
-                     bytestring >= 0.9 && < 1, containers >= 0.3 && < 0.6
+                     bytestring >= 0.9 && < 1, containers >= 0.3 && < 0.7
   else
     if flag(base3)
       Build-depends: base >= 3 && < 4, array >= 0.1 && < 0.4,
