--- unliftio-core-0.1.2.0/unliftio-core.cabal.orig	2018-08-28 07:16:03 UTC
+++ unliftio-core-0.1.2.0/unliftio-core.cabal
@@ -8,6 +8,7 @@ cabal-version: >= 1.10
 
 name:           unliftio-core
 version:        0.1.2.0
+x-revision: 1
 synopsis:       The MonadUnliftIO typeclass for unlifting monads to IO
 description:    Please see the documentation and README at <https://www.stackage.org/package/unliftio-core>
 category:       Control
@@ -26,7 +27,7 @@ library
   hs-source-dirs:
       src
   build-depends:
-      base >=4.5 && <4.12
+      base >=4.5 && <4.13
     , transformers >=0.2 && <0.6
   exposed-modules:
       Control.Monad.IO.Unlift
