--- utf8-string-1.0.1.1/utf8-string.cabal.orig	2015-08-23 16:19:40 UTC
+++ utf8-string-1.0.1.1/utf8-string.cabal
@@ -1,5 +1,6 @@
 Name:               utf8-string
 Version:            1.0.1.1
+x-revision: 3
 Author:             Eric Mertens
 Maintainer:         emertens@galois.com
 License:            BSD3
@@ -19,7 +20,7 @@ Tested-With:        GHC==7.0.4, GHC==7.4.2, GHC==7.6.3
 library
   Ghc-options:        -W -O2
 
-  build-depends: base >= 4.3 && < 4.9, bytestring >= 0.9
+  build-depends: base >= 4.3 && < 5, bytestring >= 0.9
 
   Extensions:         CPP
   Exposed-modules:    Codec.Binary.UTF8.String
